--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dva Demo</title>
-  <link rel="stylesheet" href="index.css" />
-  <base href="/">
+  <link rel="stylesheet" href="index.css"/>
+  <link rel="icon" href="https://moecube.com/favicon.ico">
 </head>
 <body>
 
 <div id="root"></div>
 
-<script src="index.js"></script>
+<script src="/index.js"></script>
 
 </body>
 </html>
