--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="index.css"/>
   <link rel="icon" href="https://moecube.com/favicon.ico">
-  <base href="https://moecube.com/console/">
+  <!--<base href="https://moecube.com/console/">-->
 </head>
 <body>
 
